--- a/Tech Trends.html
+++ b/Tech Trends.html
@@ -4,94 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Trends Store</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-    }
-
-    header, footer {
-      background-color: #0073e6;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-
-    nav {
-      background-color: #005bb5;
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      color: #ffcc00;
-    }
-
-    #products {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      padding: 20px;
-    }
-
-    .product {
-      background: white;
-      padding: 15px;
-      text-align: center;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-
-    .product img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    button {
-      background-color: #0073e6;
-      color: white;
-      border: none;
-      padding: 10px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #005bb5;
-    }
-
-    .remove-btn {
-      background-color: #ff4d4d;
-      padding: 5px;
-    }
-
-    .remove-btn:hover {
-      background-color: #ff1a1a;
-    }
-
-    #checkout {
-      padding: 20px;
-      background: white;
-      margin: 20px;
-      border-radius: 5px;
-      border: 1px solid #ddd;
-    }
-
-    footer {
-      background-color: #0073e6;
-      color: white;
-      padding: 10px;
-    }
-  </style>
+ <link rel="stylesheet" href="techpro.css">
 </head>
 <body>
 
